# Ask-My-CV

./: .gitignore  README.md  app.py  chat.py  cv.txt  ingest.py  job.txt  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
